# FastApiReact

./: .gitignore
backend/: backend.code-workspace  pyproject.toml
backend/src/: database.py  main.py  repository.py  router.py  schemas.py
frontend/: frontend.code-workspace  package-lock.json  package.json
frontend/src/: App.jsx  RegisterPage.jsx  homepage.jsx  loginForm.jsx  main.jsx
frontend/src/context/: UserContext.jsx
