[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Max Britvin <maksbritvin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
aiosqlite = "^0.20.0"
bcrypt = "^4.2.0"
cryptography = "^43.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
